--- a/payment-service.yml
+++ b/payment-service.yml
@@ -6,9 +6,9 @@ spring:
     name: payment-service
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/payments_db
-    username: ${POSTGRES_USER:postgres}
-    password: ${POSTGRES_PASSWORD:postgres}
+    url: jdbc:postgresql://postgres:5433/payments_db
+    username: postgres
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
