--- a/pdf-service.yml
+++ b/pdf-service.yml
@@ -6,9 +6,9 @@ spring:
     name: pdf-service
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/pdf_db
-    username: ${POSTGRES_USER:postgres}
-    password: ${POSTGRES_PASSWORD:postgres}
+    url: jdbc:postgresql://postgres:5433/pdf_db
+    username: postgres
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
