--- a/queries-service.yml
+++ b/queries-service.yml
@@ -6,9 +6,9 @@ spring:
     name: queries-service
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/complaint_db
-    username: ${POSTGRES_USER:postgres}
-    password: ${POSTGRES_PASSWORD:postgres}
+    url: jdbc:postgresql://postgres:5433/complaint_db
+    username: postgres
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
