--- a/auth-service.yml
+++ b/auth-service.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: auth-service
   datasource:
-    url: jdbc:postgresql://host.docker.internal:5433/auth-db
+    url: jdbc:postgresql://postgres-db:5432/auth-db
     username: postgres
     password: postgres
 
