--- a/clients-service.yml
+++ b/clients-service.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: clients-service
   datasource:
-    url: jdbc:postgresql://postgres:5433/client_db
+    url: jdbc:postgresql://postgres-db:5432/client_db
     username: postgres
     password: postgres
   jpa:
@@ -15,4 +15,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka
