--- a/lawyer-service.yml
+++ b/lawyer-service.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: lawyers-service
   datasource:
-    url: jdbc:postgresql://postgres:5433/lawyer_db
+    url: jdbc:postgresql://postgres-db:5432/lawyer_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -21,4 +21,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka
