--- a/payment-service.yml
+++ b/payment-service.yml
@@ -6,7 +6,7 @@ spring:
     name: payment-service
 
   datasource:
-    url: jdbc:postgresql://postgres:5433/payments_db
+    url: dbc:postgresql://postgres-db:5432/payments_db
     username: postgres
     password: postgres
   jpa:
@@ -17,7 +17,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka
 
 payment:
   provider: stripe
