--- a/pdf-service.yml
+++ b/pdf-service.yml
@@ -6,7 +6,7 @@ spring:
     name: pdf-service
 
   datasource:
-    url: jdbc:postgresql://postgres:5433/pdf_db
+    url: jdbc:postgresql://postgres-db:5432/pdf_db
     username: postgres
     password: postgres
   jpa:
@@ -19,7 +19,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka
 queries:
   base-url: http://localhost:8090
 
